Created a calc page, no js implementation yet

--- a/index.html
+++ b/index.html
@@ -4,9 +4,68 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Calculator</title>
 </head>
 <body>
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
+    <main>
+        <div class="calc-grid">
+            <div class="output">
+                123456
+            </div>
+            <div class="button">
+                num lk
+            </div>
+            <div class="button">
+                /
+            </div>
+            <div class="button">
+                *
+            </div>
+            <div class="button">
+                -
+            </div>
+            <div class="button">
+                1
+            </div>
+            <div class="plus-button">
+                +
+            </div>
+            <div class="enter-button">
+                enter
+            </div>
+            <div class="button">
+                2
+            </div>
+            <div class="button">
+                3
+            </div>
+            <div class="button">
+                4
+            </div>
+            <div class="button">
+                5
+            </div>
+            <div class="button">
+                6
+            </div>
+            <div class="button">
+                7
+            </div>
+            <div class="button">
+                8
+            </div>
+            <div class="button">
+                9
+            </div>
+            <div class="zero-button">
+                0
+            </div>
+            <div class="button">
+                . del
+            </div>
+        </div>
+    </main>
 </body>
 </html>
