Added some basic animations

--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <!-- <script src="script.js"></script> -->
     <title>Calculator</title>
 </head>
 <body>
-    <!-- <script src="script.js"></script> -->
     <main>
         <div class="calc-grid">
-            <div class="output">
+            <span class="output">
                 123456
-            </div>
+            </span>
             <div class="button">
                 num lk
             </div>
@@ -63,7 +63,7 @@
                 0
             </div>
             <div class="button">
-                . del
+                .
             </div>
         </div>
     </main>
