Changed some fonts and aligned output text

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 <body>
     <main>
         <div class="calc-grid">
-            <span class="output">
-                123456
-            </span>
+            <div class="output">
+                <div class="output-numbers">
+                    123456
+                </div>
+            </div>
             <div class="button">
                 num lk
             </div>
