--- a/index.html
+++ b/index.html
@@ -16,55 +16,55 @@
                     123456
                 </div>
             </div>
-            <div class="button">
+            <div class="button" id="numlk">
                 num lk
             </div>
-            <div class="button">
+            <div class="button" id="div">
                 /
             </div>
-            <div class="button">
+            <div class="button" id="mult">
                 *
             </div>
-            <div class="button">
+            <div class="button" id="sub">
                 -
             </div>
-            <div class="button">
+            <div class="button" id="1">
                 1
             </div>
-            <div class="plus-button">
+            <div class="plus-button" id="plus">
                 +
             </div>
-            <div class="enter-button">
+            <div class="enter-button" id="enter">
                 enter
             </div>
-            <div class="button">
+            <div class="button" id="2">
                 2
             </div>
-            <div class="button">
+            <div class="button" id="3">
                 3
             </div>
-            <div class="button">
+            <div class="button" id="4">
                 4
             </div>
-            <div class="button">
+            <div class="button" id="5">
                 5
             </div>
-            <div class="button">
+            <div class="button" id="6">
                 6
             </div>
-            <div class="button">
+            <div class="button" id="7">
                 7
             </div>
-            <div class="button">
+            <div class="button" id="8">
                 8
             </div>
-            <div class="button">
+            <div class="button" id="9">
                 9
             </div>
-            <div class="zero-button">
+            <div class="zero-button" id="0">
                 0
             </div>
-            <div class="button">
+            <div class="button" id="decimal">
                 .
             </div>
         </div>
