--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <!-- <script src="script.js"></script> -->
     <title>Calculator</title>
 </head>
 <body>
@@ -13,55 +12,55 @@
         <div class="calc-grid">
             <div class="output">
                 <div class="output-numbers">
-                    123456
+                    0
                 </div>
             </div>
-            <div class="button" id="numlk">
-                num lk
+            <div class="button" id="clear">
+                clear
             </div>
-            <div class="button" id="div">
+            <div class="button op" id="div">
                 /
             </div>
-            <div class="button" id="mult">
+            <div class="button op" id="mult">
                 *
             </div>
-            <div class="button" id="sub">
+            <div class="button op" id="sub">
                 -
             </div>
-            <div class="button" id="1">
+            <div class="button nums" id="one">
                 1
             </div>
-            <div class="plus-button" id="plus">
+            <div class="plus-button op" id="plus">
                 +
             </div>
             <div class="enter-button" id="enter">
                 enter
             </div>
-            <div class="button" id="2">
+            <div class="button nums" id="two">
                 2
             </div>
-            <div class="button" id="3">
+            <div class="button nums" id="three">
                 3
             </div>
-            <div class="button" id="4">
+            <div class="button nums" id="four">
                 4
             </div>
-            <div class="button" id="5">
+            <div class="button nums" id="five">
                 5
             </div>
-            <div class="button" id="6">
+            <div class="button nums" id="six">
                 6
             </div>
-            <div class="button" id="7">
+            <div class="button nums" id="seven">
                 7
             </div>
-            <div class="button" id="8">
+            <div class="button nums" id="eight">
                 8
             </div>
-            <div class="button" id="9">
+            <div class="button nums" id="nine">
                 9
             </div>
-            <div class="zero-button" id="0">
+            <div class="zero-button nums" id="zero">
                 0
             </div>
             <div class="button" id="decimal">
@@ -70,4 +69,5 @@
         </div>
     </main>
 </body>
+<script src="script.js"></script>
 </html>
