functions as a calculator !11!!1

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             <div class="plus-button op" id="plus">
                 +
             </div>
-            <div class="enter-button" id="enter">
-                enter
+            <div class="enter-button" id="equals">
+                =
             </div>
             <div class="button nums" id="two">
                 2
