Added floating point number support

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="zero-button nums" id="zero">
                 0
             </div>
-            <div class="button" id="decimal">
+            <div class="button nums" id="decimal">
                 .
             </div>
         </div>
